# pyrecist

./: .gitignore  LICENSE  README.md  pyproject.toml
pyrecist/: __main__.py  assessment.py  data.py
tests/: test_assessment.py  test_data.py
tests/data/: synthetic_evaluation.csv  synthetic_measurements.csv
